topbar and messages alignments fixed

--- a/src/components/message/message.css
+++ b/src/components/message/message.css
@@ -14,6 +14,7 @@
     border-radius: 50%;
     object-fit: cover;
     margin-right: 10px;
+    
   }
   
   .messageText{
@@ -22,6 +23,7 @@
       background-color: #1877f2;
       color: white;
       max-width: 300px;
+      margin-top: auto;
   }
   
   .messageBottom{
